src/test/programs/errors/throw_uncaught_without_code.bas
sub Main()
    throw "hello"
end sub
--output--
Error
0
hello
